Remove vehicle services from routing service